--- a/EsercitazioneWeek7.MVC/Views/Piatti/Index.cshtml
+++ b/EsercitazioneWeek7.MVC/Views/Piatti/Index.cshtml
@@ -5,9 +5,8 @@
     <table class="table table-sm table-dark table-striped">
         <thead>
             <tr>  
-                <th>Id</th>
+                <th>Tipologia</th>
                 <th>Nome</th>
-                <th>Descrizione</th>
                 <th>Prezzo</th>
                 <th></th>
             </tr>
@@ -17,16 +16,16 @@
             @foreach (var item in Model)
             {
                 <tr>
-                    <td>@item.Id</td>
+                    <td>@item.tipologia</td>
                     <td>@item.Nome</td>
-                    <td>@item.Descrizione</td>
                     <td>@item.Prezzo</td>
                     <td>
                         
-                        @if (User.IsInRole("Admnistrator"))
+                        @if (User.IsInRole("Administrator"))
                         {
-                            <a class="btn btn-light btn-outline-dark rounded-0" asp-controller="Studenti" asp-action="Edit" asp-route-id="@item.Id">Modifica piatto</a>
-                            <a class="btn btn-outline-danger rounded-0" asp-controller="Studenti" asp-action="Delete" asp-route-id="@item.Id">Elimina piatto</a>
+                            <a class="btn btn-light btn-outline-dark rounded-0" asp-controller="Piatti" asp-action="Edit" asp-route-id="@item.Id">Modifica piatto</a>
+                            <a class="btn btn-outline-danger rounded-0" asp-controller="Piatti" asp-action="Delete" asp-route-id="@item.Id">Elimina piatto</a>
+                            <a class="btn btn-light btn-outline-dark rounded-0" asp-controller="Piatti" asp-action="Assegna" asp-route-id="@item.Id">Inserisci nel menú</a>
                         }
                     </td>
                 </tr>
