--- a/EsercitazioneWeek7.MVC/Views/Shared/_Layout.cshtml
+++ b/EsercitazioneWeek7.MVC/Views/Shared/_Layout.cshtml
@@ -10,23 +10,34 @@
 </head>
 <body class=" bg-dark text-light">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark  border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Ristorante</a>
+                <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index">Ristorante</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    var name = ((System.Security.Claims.ClaimsIdentity)User.Identity).Claims.First(x => x.Type == System.Security.Claims.ClaimTypes.Name).Value;
+
+                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                        <ul class="navbar-nav flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Piatti" asp-action="Index">Piatti</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Menu" asp-action="Index">Menu</a>
+                            </li>
+
+                        </ul>
+                    </div>
+                     <strong class="mx-2">Bentornato @name!</strong>
+                     <a class="text-light"  asp-controller="Utenti" asp-action="Logout">Logout</a>
+                }
             </div>
         </nav>
     </header>
