--- a/EsercitazioneWeek7.MVC/Views/Menu/Index.cshtml
+++ b/EsercitazioneWeek7.MVC/Views/Menu/Index.cshtml
@@ -1,5 +1,44 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model ICollection<MenuViewModel>
+
+<h1>Lista Menú</h1>
+<div>
+    <table class="table table-sm table-dark table-striped">
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Prezzo</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.Nome</td>
+                    <td>@item.Piatti.Sum(x => x.Prezzo)</td>
+                    <td>
+
+                        @if (User.IsInRole("Administrator"))
+                        {
+                            <a class="btn btn-light btn-outline-dark rounded-0" asp-controller="Menu" asp-action="Details" asp-route-id="@item.Id">Dettagli Menú/a>
+                                <a class="btn btn-outline-danger rounded-0" asp-controller="Menu" asp-action="Delete" asp-route-id="@item.Id">Elimina Menú</a>
+                                }
+                        </td>
+                    </tr>
+                        }
+            </tbody>
+            <tfoot>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th>
+                        @if (User.IsInRole("Administrator"))
+                        {
+                    <a type="button" class="btn btn-light btn-outline-dark rounded-0" asp-controller="Piatti" asp-action="Create">Inserisci nuovo piatto</a>
+                        }
+            </th>
+
+            </tfoot>
+        </table>
+    </div>
